--- a/areal-1.html
+++ b/areal-1.html
@@ -8,9 +8,19 @@
 
 <body>
 
+    <script>
+
+    let bredde = 5;
+    let højde = 3;
+
+    let areal = højde * bredde;
+
+        console.log(areal){
 
 
+        }
 
-    <script src="script.js"></script>
+
+    </script>
 </body>
 </html>
