--- a/areal-1.html
+++ b/areal-1.html
@@ -15,7 +15,7 @@
 
     let areal = højde * bredde;
 
-        console.log(areal);
+        console.log("arealet er" + areal + "kvadratmeter");
 
 
     </script>
